codex-src/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__provider_models_picker.snap
---
source: tui/src/chatwidget/tests/model_pickers.rs
assertion_line: 40
expression: model_picker_snapshot(&chat)
---
  Select models
  openai-com: 3 discovered. Enter selects models to probe and add to /model.

  Type to search
  >
  ➤ Add 1 selected model
  ✕ Discard and close
  ───────────────────────
› [ ] gpt-5.5      98304 ctx; out default; capability probe pending
  [x] gpt-5.5-pro  98304 ctx; out default; capability probe pending
  [ ] chat-latest  98304 ctx; out default; capability probe pending

  Selected: gpt-5.5-pro
  Press enter to select; tab then enter to confirm or discard; esc to close
