codex-src/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__provider_remove_models_picker.snap
---
source: tui/src/chatwidget/tests/model_pickers.rs
assertion_line: 71
expression: model_picker_snapshot(&chat)
---
  Remove provider models
  openai-com: Enter selects models to remove.

  Type to search
  >
› [ ] gpt-5.5      on; upstream gpt-5.5; 98304 ctx; out default; thinking none
  [ ] gpt-5.5-pro  on; upstream gpt-5.5-pro; 98304 ctx; out default; thinking none
  ───────────────────────
  ➤ Remove selected models (nothing selected yet)
  ✕ Discard and close

  0 selected for removal
  Press enter to select; tab then enter to confirm or discard; esc to close
